...
                .width(300.dp)
                .height(50.dp),
            onClick = {

                if (usuario.isEmpty() || clave.isEmpty()) {

                    mensajeError = "Complete todos los campos"

                    scope.launch {
                        snackbarHostState.showSnackbar(
                            "Complete todos los campos"
                        )
                    }
...
                        )
                    }
                }
            }
        ) {
            Text(
                text = "Ingresar",
                fontSize = 20.sp
            )
        }

        Spacer(
            modifier = Modifier.height(15.dp)
...
