...
                    snackbarHostState.showSnackbar("Vas a la pantalla de login")
                }
                onLoginClick()
            }
        ) {
            Text(
                text = "Login",
                fontSize = 20.sp
            )
        }

        Spacer(
            modifier = Modifier.height(35.dp)
...
